[tool.poetry]
name = "addressbook"
version = "0.1.0"
description = "Simple addressbook"
authors = ["victorcoffee <106419325+victorcoffee@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
